--- a/dbc2.css
+++ b/dbc2.css
@@ -1,1 +1,2 @@
-h1 {font-size: 24px; font-family:  Verdana; color: green;}
+h1 {font-size: 50px; font-family: Georgia; color: #48D1CC;}
+body {background-color: #FDF5E6; font-family: Georgia;}
