--- a/dbc2.css
+++ b/dbc2.css
@@ -1,2 +1,2 @@
 h1 {font-size: 50px; font-family: Georgia; color: #48D1CC;}
-body {background-color: #FDF5E6; font-family: Georgia;}
+body {background-color: #FDF5E6;}
