--- a/dbc2.css
+++ b/dbc2.css
@@ -1,2 +1,2 @@
 h1 {font-size: 50px; font-family: Georgia; color: #48D1CC;}
-body {background-color: #F8FBC8F; font-family: Georgia; font-size: 18px}
+body {background-color: #4682B4; font-family: Georgia; font-size: 18px}
