--- a/dbc2.css
+++ b/dbc2.css
@@ -1,3 +1,3 @@
 h1 {font-size: 50px; font-family: Georgia; color: #48D1CC;}
 body {background-color: #4682B4; font-family: Georgia; font-size: 18px; border: black solid 5px;}
-.Picture {width: 200px; height: 120px;}
+.Picture img {width: 100px; height: 70px;}
