--- a/dbc2.css
+++ b/dbc2.css
@@ -1,3 +1,6 @@
 h1 {font-size: 50px; font-family: Georgia; color: #48D1CC;}
 body {background-color: #4682B4; font-family: Georgia; font-size: 18px; border: black solid 5px;}
-.picture img {width: 100px; height: 70px;}
+.picture {
+	postion: fixed;
+	width: 60%; 
+	height: 60%;}
