--- a/dbc1.css
+++ b/dbc1.css
@@ -1,7 +1,19 @@
 
 h1 {font-size: 50px; font-family: Georgia; color: #48D1CC;}
 body {background-color: #4682B4; font-family: Georgia; font-size: 18px; border: black solid 5px;}
+
+
 ul {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+}
+ul li{
+	position: absolute;
+	right: 10px;
+	top: 10px;
+}
+ul img{
 	position: absolute;
 	right: 10px;
 	top: 10px;
