--- a/dbc1.css
+++ b/dbc1.css
@@ -26,7 +26,9 @@ ol img{float:right;
 ol {float: right;
 	position:relative;
 }
-#Adventures {right: 10px;}
+#Adventures {float: right;
+position:relative;
+top: 300px;}
 
 .turn_green:hover {color:#009933;}
 
