--- a/dbc2.css
+++ b/dbc2.css
@@ -1,3 +1,3 @@
-body {background-color: #99CCCC; border: black dotted 5px;}
+body {background-color: #99CCCC; border: black solid 5px;}
 
-body img {float: left; border: 3px solid blue;}
+body img {float: left; border: 5px solid blue;}
