--- a/dbc2.css
+++ b/dbc2.css
@@ -1,5 +1,5 @@
 body {background-color: #99CCCC;}
 
-h1 {border: black solid 5px}
+h1 {border: black solid 3px}
 
-body img {float: left; border: 5px solid blue;}
+body img {float: left; border: 5px solid white}
