--- a/dbc2.css
+++ b/dbc2.css
@@ -3,3 +3,13 @@ body {background-color: #99CCCC;}
 h1 {border: black solid 3px}
 
 body img {float: left; border: 5px solid white}
+
+.container {position:relative; padding:0 0 0 55px;}
+
+#sidebar {position: absolute; top: 0; bottom:0; left:0; width: 50px; background: #000;}
+
+#header {border: 1px solid #0000; width:100px; height:20px; margin:0 0 5px 0;}
+
+#content {border:1px solid #000; width: 100px; height:50px; margin:5px 0 5px 0;}
+
+#footer {border:1px solid #000; width:100px; height:20px; margin:5px 0 0 0;}
