--- a/dbc2.css
+++ b/dbc2.css
@@ -6,7 +6,7 @@ body img {float: left; border: 5px solid white}
 
 .container {position:relative; padding:0 0 0 55px;}
 
-#sidebar {position: absolute; top: 0; bottom:0; left:0; width: 400px; background: #000;}
+#sidebar {position: absolute; top: 0; bottom:0; left:0; width: 1000px; background: none;}
 
 #header {border: 1px solid #0000; width:200px; height:100px; margin:0 0 5px 0;}
 
