--- a/dbc2.css
+++ b/dbc2.css
@@ -1,4 +1,4 @@
-body {background-color: #99CCCC; vertical-align: center}
+body {background-color: #99CCCC; text-align: center}
 
 h1 {border: black solid 3px}
 
