--- a/dbc1.css
+++ b/dbc1.css
@@ -1,8 +1,8 @@
 
 h1 {font-size: 50px; font-family: Georgia; color: #48D1CC;}
-body {background-color: #4682B4; font-family: Georgia; font-size: 18px; border: black solid 5px;}
+body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
-.turn_green:hover {color:#009933;}
+.turn_green:hover {color:#99CCCC;}
 
 footer {float: left; bottom:0; right:0; position:fixed; right:5px;}
 
