--- a/dbc2.css
+++ b/dbc2.css
@@ -6,7 +6,19 @@ body img {float: center; position:relative; border: 5px solid white}
 
 aside {float:left;}
 
-.span2 p {text-align:center;}
+div.figure {
+  float: right;
+  width: 30%;
+  border: thin silver solid;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+div.figure p {
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+}
 
 #sidebar {position: absolute; top: 70px; bottom:0; left:0; width: 100px; background: none; font-size: 18px;}
 
