--- a/dbc2.css
+++ b/dbc2.css
@@ -5,7 +5,7 @@ h1 {border: black solid 3px}
 body img {float: center; position:relative; border: 5px solid white}
 
 aside {float:left;}
-
+div.figure {position:relative;}
 div.figure p {
   text-align: center;
   font-style: italic;
