--- a/dbc2.css
+++ b/dbc2.css
@@ -3,6 +3,7 @@ body {background-color: #99CCCC; text-align: center}
 h1 {border: black solid 3px}
 
 body img {float: center; position:relative; border: 5px solid white}
+body div img {float: center; position:relative; border: 5px solid white}
 
 aside {float:left;}
 
@@ -24,7 +25,7 @@ div.figure p {
   z-index:2; 
   color: #fff;
   font-weight: bold;
- 
+
 }
 
 #sidebar {position: absolute; top: 70px; bottom:0; left:0; width: 100px; background: none; font-size: 18px;}
