--- a/dbc2.css
+++ b/dbc2.css
@@ -16,16 +16,14 @@ div.figure p {
   font-size: 28px;
   display:block; 
   width:100%; 
-  position: absolute; 
-  bottom: 5px; 
+  position: relative; 
+  bottom: 40px; 
   left:0; 
   margin:0; 
-  padding:5px 0; 
   text-indent:5px; 
   z-index:2; 
   color: #fff;
   font-weight: bold;
-
 }
 
 #sidebar {position: absolute; top: 70px; bottom:0; left:0; width: 100px; background: none; font-size: 18px;}
