--- a/dbc1.css
+++ b/dbc1.css
@@ -1,8 +1,11 @@
 
-body h1 {float: center; font-size: 50px; font-family: Georgia; color: #48D1CC;}
+h1 {border: black solid 3px; float:center;color: #48D1CC;}
+
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
-.turn_green:hover {color:#99CCCC;}
+#sidebar {float: left; position: absolute; top: 70px; bottom:0; left:0; width: 150px; background: none; font-size: 18px;}
+
+.turn_green:hover {color:#5F9EA0;}
 
 footer {float: left; bottom:0; right:0; position:fixed; right:5px;}
 
