--- a/dbc1.css
+++ b/dbc1.css
@@ -3,7 +3,7 @@ h1 {border: black solid 3px; float:center;color: #48D1CC;}
 
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
-#sidebar {float: left; position: absolute; top: 70px; bottom:0; left:0; width: 150px; background: none; font-size: 18px;}
+#sidebar {float: left; position: relative; top:200px; bottom:0; left:0; width: 75px; background: none; font-size: 18px;}
 
 .turn_green:hover {color:#5F9EA0;}
 
