--- a/dbc1.css
+++ b/dbc1.css
@@ -1,9 +1,9 @@
 
-h1 {border: black solid 3px; float:center;color: #48D1CC;}
+h1 {border: black solid 3px; position: absolute; float:center;color: black;}
 
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
-#sidebar {float: left; position: relative; top:200px; bottom:0; left:0; width: 75px; background: none; font-size: 18px;}
+#sidebar {float: left; position: relative; top:150px; bottom:0; left:0; width: 75px; background: none; font-size: 18px;}
 
 .turn_green:hover {color:#5F9EA0;}
 
