--- a/dbc1.css
+++ b/dbc1.css
@@ -3,7 +3,7 @@ h1 {border: black solid 3px; position: absolute; float:center;color: black;}
 
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
-#sidebar {float: left; position: relative; top:150px; bottom:0; left:0; width: 75px; background: none; font-size: 18px;}
+#sidebar {float: left; position: relative; top:100px; bottom:0; left:0; width: 75px; background: none; font-size: 18px;}
 
 .turn_green:hover {color:#5F9EA0;}
 
@@ -19,5 +19,14 @@ div h4 {
 	width:400px;
 	float: center;
 }
+span {
 
+	background: #fff; 
+	border: 6px solid #ccc;
+	height: 170px;
+	margin: 20px;
+	padding: 20px;
+	width:200px;
+	float: center;
+}
 ul {float: center;}
