--- a/dbc1.css
+++ b/dbc1.css
@@ -1,5 +1,5 @@
 
-h1 {border: black solid 3px; position: absolute; float:center;color: black;}
+h1 {float:center;color: black;}
 
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
