putting in a pic of me

--- a/dbc1.css
+++ b/dbc1.css
@@ -4,6 +4,8 @@ body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: 
 
 .turn_green:hover {color:#99CCCC;}
 
+section {float:right;}
+
 footer {float: left; bottom:0; right:0; position:fixed; right:5px;}
 
 div {
