--- a/dbc1.css
+++ b/dbc1.css
@@ -3,8 +3,8 @@ body h1 {text-align: center; font-size: 50px; font-family: Georgia; color: black
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
 .turn_green:hover {color:#99CCCC;}
+#me {float:right;}
 
-span {float: right;}
 
 footer {float: left; bottom:0; right:0; position:fixed; right:5px;}
 
