--- a/dbc2.css
+++ b/dbc2.css
@@ -27,7 +27,8 @@ div.figure p {
 }
 
 
-#sidebar {float: left; position: absolute; top: 130px; bottom:0; left:0; width: 150px; background: none; font-size: 18px;}
+#sidebar { 
+	position: absolute; top: 130px; bottom:0; left:0; width: 150px; background: none; font-size: 18px;}
 
 #header {text-align: center; border: 1px solid #0000; width:200px; height:100px; margin:0 0 5px 0;}
 
