change color on hover

--- a/dbc1.css
+++ b/dbc1.css
@@ -2,7 +2,7 @@
 body h1 {text-align: center; font-size: 50px; font-family: Georgia; color: black;}
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
-.turn_green:hover {color:#99CCCC;}
+div .turn_green:hover {color:#99CCCC;}
 
 #me {position: absolute;
  top: 125px; 
