--- a/dbc1.css
+++ b/dbc1.css
@@ -1,5 +1,12 @@
 
-body h1 {text-align: center; font-size: 50px; font-family: Georgia; color: black;}
+body h1 {text-align: center;
+ font-size: 50px;
+ font-family: Georgia;
+ color: black;
+ background: url('../images/IMG_7249 2.JPG') no-repeat 0 50%;
+}
+
+
 body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
 a:hover {color:#99CCCC;}
