--- a/index.css
+++ b/index.css
@@ -1,1 +1,1 @@
-body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
+body {text-align: center; background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
