--- a/index.css
+++ b/index.css
@@ -1,1 +1,3 @@
 body {text-align: center; background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
+
+img {opacity: 0.4; width: 100%; height: 100%;}
