--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
 body {text-align: center; background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 
-img {opacity: 0.4; width: 100%; height: 100%;}
+div.background {
+	opacity: 0.4;
+	width: 100%;
+	height: 100%;
+	position:absolute;
+	top:0;
+	left:0;}
