--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {text-align: center; background-color: #99CCCC; font-family: Georgia; font-
 
 div.background {
 	opacity: 0.4;
-	width: 100%;
-	height: 100%;
+	width: 1000px;
+	height: 600px;
 	position:absolute;
 }
