--- a/index.css
+++ b/index.css
@@ -6,12 +6,12 @@ body {
 	border: black solid 5px;
 }
 
-body.background {
+body div.background {
 	opacity: 0.4;
-	width: 600px;
-	height: 400px;
+	width: 100%;
+	height: 100%;
 	position:absolute;
-	left:0;
+	
 }
 
 nav {
