--- a/index.css
+++ b/index.css
@@ -4,10 +4,15 @@ body {
 	font-family: Georgia; 
 	font-size: 18px; 
 	border: black solid 5px;
+
 }
 
 div .background {
 	opacity: 0.4;
+	width: 100%;
+	height: 100%;
+	max-width: 1500px;
+	max-height:auto;
 	position:absolute;
 	
 }
