--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@ body {
 
 div .background {
 	opacity: 0.4;
+	width:100%;
+	height: 100%;
 	max-width: 1500px;
 	max-height:auto;
 	position:absolute;
