--- a/index.css
+++ b/index.css
@@ -7,13 +7,11 @@ body {
 
 }
 
-div .background {
+div .tb {
 	opacity: 0.4;
-	width:100%;
-	height: 100%;
-	max-width: 1500px;
-	max-height:auto;
 	position:absolute;
+	top:0
+	left:5px;
 	
 }
 
