--- a/index.css
+++ b/index.css
@@ -11,10 +11,10 @@ div .tb {
 	opacity: 0.4;
 	position:absolute;
 	width:100%;
-	height:100%;
+	height:auto;
 	top:0
 	left:0px;
-	z-index:-5000;
+	
 	
 }
 
