position fig caption onto of photo

--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@ body {
 
 }
 
+figcaption {font-size: 40px; color: black; position:absolute; top: 10px;}
+
 div .tb {
 	opacity: 0.4;
 	position:absolute;
