--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 
 }
 
-figcaption {font-size: 40px; color: black; position:absolute; top: 10px;}
+figcaption {font-size: 40px; color: black; position:absolute; top: 40px; text-align: center;}
 
 div .tb {
 	opacity: 0.4;
