--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ nav {
 }
 
 .button {
-  font: bold 11px Arial;
+  font: bold 18px Georgia;
   text-decoration: none;
   background-color: #EEEEEE;
   color: #333333;
