--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ nav a:hover {color:black;}
   border: 1px solid black;
   margin-top: 2px;
   text-align: center;
-  overflow:hidden;
+  margin-right: 40px;
+  margin-left: 25px;
   float:left;
 }
