--- a/favorite_website.css
+++ b/favorite_website.css
@@ -1,2 +1,2 @@
-body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
+body {text-align: left; background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
 h1 {text-align: center;}
