--- a/favorite_website.css
+++ b/favorite_website.css
@@ -1,2 +1,33 @@
-body {text-align: left; background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
+
 h1 {text-align: center;}
+
+
+body {
+	text-align: left; 
+	background-color: #99CCCC; 
+	font-family: Georgia; 
+	font-size: 18px; 
+	border: black solid 5px;
+
+}
+
+figcaption {font-size: 40px; color: black; top: 60px; right: 385px;}
+	
+figure img {overflow: hidden;}
+
+nav a:hover {color:black;}
+
+.button {
+  font: bold 22px Georgia;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  display: block;
+  width: 100%;
+  height:35px;
+  background: white;
+  border: 1px solid black;
+  margin-top: 2px;
+  text-align: center;
+  float:left;
+}
