--- a/favorite_website.css
+++ b/favorite_website.css
@@ -20,7 +20,7 @@ nav a:hover {color:black;}
 .button {
   font: bold 22px Georgia;
   text-decoration: none;
-  background-color: #EEEEEE;
+  background-color: #99CCCC;
   color: #333333;
   display: block;
   width: 100%;
