--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ nav a:hover {color:black;}
   font: bold 22px Georgia;
   text-decoration: none;
   background-color: #99CCCC;
-  color: #333333;
+  color: #99CCCC;
   display: block;
   width: 100%;
   height:35px;
