--- a/index.css
+++ b/index.css
@@ -1,21 +1,18 @@
 body {
-	text-align: center; 
-	background-color: #EEEEEE; 
-	font-family: Georgia; 
-	font-size: 18px; 
+	
+	background-color: #FFF; 
 	border: black solid 5px;
-
 }
 
-nav ul ul {
+.navbar ul ul {
   display: none;
 }
 
-  nav ul li:hover > ul {
+  .navbar ul li:hover > ul {
     display: block;
   }
 
-nav ul {
+.navbar ul {
   background: #efefef; 
   background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
   background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
@@ -25,49 +22,51 @@ nav ul {
   border-radius: 10px;  
   list-style: none;
   position: relative;
-  display: inline-table;
+  display: inline-block;
 }
-  nav ul:after {
+  .navbar ul:after {
     content: ""; clear: both; display: block;
   }
 
-nav ul li {
+.navbar ul li {
   float: left;
 }
-  nav ul li:hover {
+  .navbar ul li:hover {
     background: #4b545f;
     background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
     background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
     background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
   }
-    nav ul li:hover a {
+    .navbar ul li:hover a {
       color: #fff;
     }
   
-  nav ul li a {
-    display: block; padding: 25px 40px;
-    color: #757575; text-decoration: none;
+  .navbar ul li a {
+    display: block; 
+    padding: 25px 40px;
+    color: #757575; 
+    text-decoration: none;
   }
 
-nav ul ul {
+.navbar ul ul {
   background: #5f6975; border-radius: 0px; padding: 0;
   position: absolute; top: 100%;
 }
-  nav ul ul li {
+  .navbar ul ul li {
     float: none; 
     border-top: 1px solid #6b727c;
     border-bottom: 1px solid #575f6a;
     position: relative;
   }
-    nav ul ul li a {
+    .navbar ul ul li a {
       padding: 15px 40px;
       color: #fff;
     } 
-      nav ul ul li a:hover {
+      .navbar ul ul li a:hover {
         background: #4b545f;
       }
 
-nav ul ul ul {
+.navbar ul ul ul {
   position: absolute; left: 100%; top:0;
 }
 
