--- a/index.css
+++ b/index.css
@@ -14,9 +14,9 @@ body {
 
 .navbar ul {
   background: #33CC99; 
-  background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
-  background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
-  background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+  background: linear-gradient(top, #33CC99 0%, #339999 100%);  
+  background: -moz-linear-gradient(top, #33CC99 0%, #339999 100%); 
+  background: -webkit-linear-gradient(top, #33CC99 0%,#339999 100%); 
   box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
   padding: 0 20px;
   border-radius: 10px;  
