--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
 	background-color: #FFF; 
 	border: black solid 5px;
 }
-.navbar {background-color:#33CC99;}
+
 .navbar ul ul {
   display: none;
 }
@@ -13,9 +13,9 @@ body {
   }
 
 .navbar ul {
-  background: #33CC99; 
-  background: linear-gradient(top, #33CC99 0%, #339999 100%);  
-  background: -moz-linear-gradient(top, #33CC99 0%, #339999 100%); 
+  background: #FFF; 
+  background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+  background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
   background: -webkit-linear-gradient(top, #FFCC99 0%,#FFFF99 100%) 
   box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
   padding: 0 20px;
