--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
   background: #FFFF99; 
   background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
   background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
-  background: -webkit-linear-gradient(top, #FFCC99 0%,#FFFF99 100%) 
+  background: -webkit-linear-gradient(top, #FFCC99 0%,#FFFF99 100%); 
   box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
   padding: 0 20px;
   border-radius: 10px;  
