--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ body {
   }
 
 .navbar ul ul {
-  background: #33CC99; border-radius: 0px; padding: 0;
+  background: #333333; border-radius: 0px; padding: 0;
   position: absolute; top: 100%;
 }
   .navbar ul ul li {
