--- a/blog.css
+++ b/blog.css
@@ -1,33 +1,83 @@
+
 h1 {text-align: center;}
 
-
 body {
-	text-align: left; 
-	background-color: #99CCCC; 
-	font-family: Georgia; 
-	font-size: 18px; 
-	border: black solid 5px;
+  
+  background-color: #FFF; 
+  border: black solid 5px;
+  text-align:center;
+}
+.navbar {text-align:center;}
+.navbar ul ul {
+  display: none;
+}
 
+  .navbar ul li:hover > ul {
+    display: block;
+  }
+
+.navbar ul {
+  background: #FFFF99; 
+  background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+  background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+  background: -webkit-linear-gradient(top, #FFCC99 0%,#FFFF99 100%); 
+  box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+  padding: 0 20px;
+  border-radius: 10px;  
+  list-style: none;
+  position: relative;
+  display: inline-block;
+}
+  .navbar ul:after {
+    content: ""; clear: both; display: block;
+  }
+
+.navbar ul li {
+  float: left;
+}
+  .navbar ul li:hover {
+    background: #4b545f;
+    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+  }
+    .navbar ul li:hover a {
+      color: #fff;
+    }
+  
+  .navbar ul li a {
+    display: block; 
+    padding: 25px 40px;
+    color: #757575; 
+    text-decoration: none;
+  }
+
+.navbar ul ul {
+  background: #333333; border-radius: 0px; padding: 0;
+  position: absolute; top: 100%;
+}
+  .navbar ul ul li {
+    float: none; 
+    border-top: 1px solid #6b727c;
+    border-bottom: 1px solid #575f6a;
+    position: relative;
+  }
+    .navbar ul ul li a {
+      padding: 15px 40px;
+      color: #fff;
+    } 
+      .navbar ul ul li a:hover {
+        background: #4b545f;
+      }
+
+.navbar ul ul ul {
+  position: absolute; left: 100%; top:0;
 }
 
 figcaption {font-size: 40px; color: black; top: 60px; right: 385px;}
-	
+  
 figure img {overflow: hidden;}
 
-nav a:hover {color:black;}
+.tracker {float:right;}
 
-.button {
-  font: bold 22px Georgia;
-  text-decoration: none;
-  background-color: #99CCCC;
-  color: #333333;
-  display: block;
-  width: 100%;
-  height:35px;
-  background: white;
-  border: 1px solid black;
-  margin-top: 2px;
-  text-align: center;
-  float:left;
-}
 img {float: center;}
