--- a/dbc1.css
+++ b/dbc1.css
@@ -1,4 +1,88 @@
 
+h1 {text-align: center;}
+
+body {
+  
+  background-color: #FFF; 
+  border: black solid 5px;
+  text-align:center;
+}
+.navbar {text-align:center;}
+.navbar ul ul {
+  display: none;
+}
+
+  .navbar ul li:hover > ul {
+    display: block;
+  }
+
+.navbar ul {
+  background: #FFFF99; 
+  background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+  background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+  background: -webkit-linear-gradient(top, #FFCC99 0%,#FFFF99 100%); 
+  box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+  padding: 0 20px;
+  border-radius: 10px;  
+  list-style: none;
+  position: relative;
+  display: inline-block;
+}
+  .navbar ul:after {
+    content: ""; clear: both; display: block;
+  }
+
+.navbar ul li {
+  float: left;
+}
+  .navbar ul li:hover {
+    background: #4b545f;
+    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+  }
+    .navbar ul li:hover a {
+      color: #fff;
+    }
+  
+  .navbar ul li a {
+    display: block; 
+    padding: 25px 40px;
+    color: #757575; 
+    text-decoration: none;
+  }
+
+.navbar ul ul {
+  background: #333333; border-radius: 0px; padding: 0;
+  position: absolute; top: 100%;
+}
+  .navbar ul ul li {
+    float: none; 
+    border-top: 1px solid #6b727c;
+    border-bottom: 1px solid #575f6a;
+    position: relative;
+  }
+    .navbar ul ul li a {
+      padding: 15px 40px;
+      color: #fff;
+    } 
+      .navbar ul ul li a:hover {
+        background: #4b545f;
+      }
+
+.navbar ul ul ul {
+  position: absolute; left: 100%; top:0;
+}
+
+figcaption {font-size: 40px; color: black; top: 60px; right: 385px;}
+  
+figure img {overflow: hidden;}
+
+.tracker {float:right;}
+
+img {float: center;}
+
+
 body h1 {text-align: center;
  font-size: 50px;
  font-family: Georgia;
@@ -6,17 +90,11 @@ body h1 {text-align: center;
 }
 
 
-body {background-color: #99CCCC; font-family: Georgia; font-size: 18px; border: black solid 5px;}
-
-a:hover {color:#99CCCC;}
-
-#me {position: absolute;
- top: 125px; 
- left:725px;}
 
 section div h4 {float:center;}
 
 footer {float: left; bottom:0; right:0; position:fixed; right:5px;}
+
 
 div {
 	
