change background color

--- a/dbc2.css
+++ b/dbc2.css
@@ -3,7 +3,7 @@ h1 {text-align: center;}
 
 body {
   
-  background-color: #FFCC99; 
+  background-color: #FFF; 
   border: black solid 5px;
   text-align:center;
 }
