--- a/blog.css
+++ b/blog.css
@@ -7,6 +7,7 @@ body {
   border: black solid 5px;
   text-align:center;
   line-height: 150%;
+  font-size:14px;
 }
 .navbar {text-align:center;}
 .navbar ul ul {
