--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@ body {
 	background-color: #FFF; 
 	border: black solid 5px;
   text-align:center;
+  font-size:20px;
+  line-height:130%;
 }
 .navbar {text-align:center;}
 .navbar ul ul {
